fixati i link delle player cards e overflow hidden sul body

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -6,5 +6,9 @@
 
 header{
     text-transform: capitalize;
+}
+
+body{
     overflow-x: hidden;
+
 }
